# katalyst-terminal

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build-rpm.sh  katalyst-terminal.spec
.github/: FUNDING.yml
.github/workflows/: c-cpp.yml
data/: org.katalyst.Terminal.desktop
gcm.cache/: m1.gcm  terminal.ansi.color.gcm  terminal.sgr.param.gcm
shaders/: terminal_quad.frag  terminal_quad.vert
src/: MainWindow.cpp  QtShim.h  main.cpp
src/dbus/: TerminalDBus.cpp
src/modules/: AnsiColorCore.cpp  SgrParamCore.cpp
src/terminal/: PtyProcess.cpp  TerminalBuffer.cpp  TerminalConfig.cpp  TerminalSession.cpp  VtParser.cpp  VtParserCore.cpp
src/ui/: TerminalTab.cpp  TerminalView.cpp  TerminalViewCommon.cpp  VulkanTerminalView.cpp
src/vulkan/: VulkanRenderer.cpp  VulkanTerminalWindow.cpp
tests/: test_terminal.cpp  test_ui.cpp
